reset link + locale fixes